--- a/assignment3/part2/style.css
+++ b/assignment3/part2/style.css
@@ -1,1 +1,51 @@
+html {
+    font-family: sans-serif;
+  }
+  
+  /* Your CSS below here */
 
+div {
+
+    /* first and second step */
+    width: 200px;
+    height: 150px; 
+    
+    /* third step */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    /* fourth step*/
+    display: flex;
+    justify-content: center; /* horizontal */
+    align-items: center;/* vertical */
+    
+    /* sixth step */
+    font-size: 1.1rem; /* is about 18 pixels, is better this way so it scales whith the browser font */
+    
+    /* seventh step */
+    background-color: #000001; 
+    
+    /* eighth step */
+    color: #01fc48; 
+    
+    /* ninth step */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.275);
+    
+    /* tenth step */
+    border-radius: 10px;
+    
+    /* eleventh step */
+    border: 1px solid #ffe603; 
+    
+    /* twelfth step*/
+    background: linear-gradient(to bottom right, rgba(0, 0, 0, 0), rgba(255, 0, 0, 0.2) 30%, rgba(253, 1, 1, 0.962));
+    
+    /* thirteenth step */
+    box-shadow: 0 4px 6px rgba(6, 0, 0, 0.954),
+            inset 2px 2px 3px rgba(255, 255, 255, 0.798),
+            inset -2px -2px 3px rgba(3, 0, 0, 0.745);
+  }
+  
+  
