--- a/assignment3/part3/style.css
+++ b/assignment3/part3/style.css
@@ -74,11 +74,12 @@
   
   h1 {
     text-align: center; 
+    letter-spacing: 0.5em; 
   }
   
   h2, h3 {
-    font-size: 1.5em; /
-    letter-spacing: 0.05em; 
+    font-size: 1.5em; 
+    letter-spacing: 0.5em; 
   }
   
   p {
@@ -148,8 +149,7 @@ nav {
   }
   
   nav ul {
-    list-style-type: none; 
-    padding: 5; 
+    padding: 5px; 
   }
   
   nav li {
